# nerva

./: CITATION.cff  CMakeLists.txt  Jamroot  README.md  setup.py
doc/: python-frameworks.adoc
docker/ubuntu-focal/: Dockerfile
docker/ubuntu-jammy/: Dockerfile
docker/ubuntu-yammy/: Dockerfile
examples/: CMakeLists.txt  Jamfile  inspect_npz_file.cpp  io.cpp  mkl_slow_product.cpp
nerva/: activation.py  dataset.py  layers.py  learning_rate.py  loss.py  optimizers.py  utilities.py  weights.py
python/: augment_data.py  augment_data.sh  both  chessboard.py  cifar10.py  compare1.sh  compare_models.py  compare_pytorch_nerva.py  compare_pytorch_nerva.sh  create_datasets_torch.py  dense_sparse.py  experiment.sh  inference_experiment.sh  inspect_npz.py  issue1.sh  issue2.sh  load_data.py  make_packages.py  mlp-batchnorm.sh  mlp-compare.sh  mlp-cpp.sh  mlp-default.sh  mlp-dense.sh  mlp-dropout.sh  mlp-functions.sh  mlp-preprocessed.sh  mlp-regrow.sh  mlp-sparse.sh  mlp-srelu.sh  mlp-timer.py  mlp-timer.sh  mlp.py  mlp.sh  mlp_functions.py  mlp_jax_colwise.py  mlp_jax_rowwise.py  mlp_numpy_colwise.py  mlp_numpy_rowwise.py  mlp_tensorflow_colwise.py  mlp_tensorflow_rowwise.py  (+32 more)
python/mlps/: README.md  experiment.sh  install_packages.sh  make_packages.py  mlp_experiment.py  mlp_experiment.sh  mlp_jax_colwise.py  mlp_jax_rowwise.py  mlp_numpy_colwise.py  mlp_numpy_rowwise.py  mlp_tensorflow_colwise.py  mlp_tensorflow_rowwise.py  mlp_torch_colwise.py  mlp_torch_rowwise.py  test_packages.sh
python/nerva/: activation.py  dataset.py  datasets.py  datasets_colwise.py  datasets_rowwise.py  layers.py  layers_colwise.py  layers_rowwise.py  learning_rate.py  learning_rate_colwise.py  learning_rate_rowwise.py  loss.py  loss_colwise.py  optimizers.py  pruning.py  pruning_colwise.py  pruning_rowwise.py  random.py  training.py  training_colwise.py  training_rowwise.py  utilities.py  utilities_colwise.py  utilities_rowwise.py  weights.py
python/nerva_jax/: layers_colwise.py  layers_rowwise.py  loss_functions.py  loss_functions_colwise.py  loss_functions_rowwise.py  matrix_operations.py  multilayer_perceptron_colwise.py  multilayer_perceptron_rowwise.py  parse_mlp.py  parse_mlp_colwise.py  parse_mlp_rowwise.py  softmax_functions.py  softmax_functions_colwise.py  softmax_functions_rowwise.py  training_colwise.py  training_rowwise.py
python/nerva_numpy/: layers_colwise.py  layers_rowwise.py  loss_functions.py  loss_functions_colwise.py  loss_functions_rowwise.py  matrix_operations_2d.py  multilayer_perceptron_colwise.py  multilayer_perceptron_rowwise.py  parse_mlp.py  parse_mlp_colwise.py  parse_mlp_rowwise.py  softmax_functions.py  softmax_functions_colwise.py  softmax_functions_rowwise.py  training_colwise.py  training_rowwise.py  utilities.py  weight_initializers.py
python/nerva_sympy/: layers_colwise.py  layers_rowwise.py  loss_functions.py  loss_functions_colwise.py  loss_functions_rowwise.py  matrix_operations.py  multilayer_perceptron_colwise.py  multilayer_perceptron_rowwise.py  optimizers.py  parse_mlp.py  parse_mlp_colwise.py  parse_mlp_rowwise.py  softmax_functions.py  softmax_functions_colwise.py  softmax_functions_rowwise.py  weight_initializers.py
python/nerva_tensorflow/: layers_colwise.py  layers_rowwise.py  loss_functions.py  loss_functions_colwise.py  loss_functions_rowwise.py  multilayer_perceptron_colwise.py  multilayer_perceptron_rowwise.py  parse_mlp.py  parse_mlp_colwise.py  parse_mlp_rowwise.py  softmax_functions.py  softmax_functions_colwise.py  softmax_functions_rowwise.py  training_colwise.py  training_rowwise.py
python/nerva_torch/: datasets.py  layers_colwise.py  layers_rowwise.py  learning_rate.py  loss_functions.py  loss_functions_colwise.py  loss_functions_rowwise.py  multilayer_perceptron_colwise.py  multilayer_perceptron_rowwise.py  parse_mlp.py  parse_mlp_colwise.py  parse_mlp_rowwise.py  softmax_functions.py  softmax_functions_colwise.py  softmax_functions_rowwise.py  training_colwise.py  training_rowwise.py  utilities.py
python/nervacolwise/: activation.py  datasets.py  layers.py  learning_rate.py  optimizers.py  pruning.py  training.py  utilities.py  utilities_colwise.py  weights.py
python/snn/: compare.py  datasets.py  models.py  plot_acc-vs-density.py  plot_learning_curve.py  plot_x-vs-density.py  torch_models.py  train.py
python/snn_initial/: snn.py  snn.sh
python/sparselearning/: core.py  core_reini.py  funcs.py  logger.py  models.py  snip.py  train_both.py  train_nerva.py  train_pytorch.py  utils.py
python/symbolic/: activation_functions.py  activation_functions_numpy.py  activation_functions_sympy.py  activation_functions_sympy_1d.py  activation_functions_tensorflow.py  activation_functions_torch.py  experiment.sh  (+49 more)
scripts/: extract_equations.py  make_layer_code.py  make_layer_equations.py  make_loss_tests.py  make_multilayer_perceptron_tests.py  test_utilities.py
src/: logger.cpp  python-bindings.cpp  utilities.cpp
tests/: CMakeLists.txt  Jamfile  batch_normalization_test.cpp  checkgradients  dataset_view_test.cpp  densities_test.cpp  derivations_test.py  eigen_test.cpp  gradient_test.cpp  gradients.sh  gradients_chessboard.sh  gradients_cifar10.sh  issue1.sh  issue2.sh  layer_test.cpp  loss_function_test.cpp  make_loss_tests.py  make_mlp_tests.py  make_multilayer_perceptron_tests.py  mask_test.cpp  matrix_operation_test.cpp  mkl_matrix_test.cpp  mkl_test.cpp  multilayer_perceptron_test.cpp  nan_test.cpp  numpy_test.cpp  print_test.cpp  regrow_test.cpp  regrowth_test.cpp  softmax_test.cpp  sycl_test.cpp  test_utilities.py
tests/test_headers/: Jamfile
tools/: CMakeLists.txt  Jamfile  mkl.cpp  mlp.cpp
(+492 files in other folders)
